Updating Navigation bar of all pages using JavaScript

--- a/styles.css
+++ b/styles.css
@@ -771,3 +771,19 @@ footer div{
   }
 
   /* End of TOP Button */
+
+  /* Testing Section */
+/* ul li {
+    display: inline-block;
+    background-color: #1c98e0;
+    padding: 5px;
+}
+ul li .nav-link {
+    color: orange;
+    background-color: #1c98e0;
+    padding: 15px 15px;
+}
+ul li .active {
+    color: white;
+} */
+  /* End of testing */
