Modify index, script.js, style.css and add json

--- a/styles.css
+++ b/styles.css
@@ -788,6 +788,13 @@ footer div{
     background-color: #78C0E0;
   }
 
+
+ .card{
+    margin: 20px;
+ }
+ .card-text-justify {
+    text-align: justify;
+ }
   /* End of TOP Button */
 
   /* Testing Section */
