modify pages, styles and script

--- a/styles.css
+++ b/styles.css
@@ -503,12 +503,18 @@ footer div{
     flex: 1;
     /* background-color: gray; */
 }
-.book-now-form{
-    /* display: flex; */
-    /* width: 50%; */
+/* .book-now-form{
+    display: flex; 
+    width: 50%;
     margin: auto;
     padding: 20px;
-    /* background-color: #c0d6e6; */
+    background-color: #c0d6e6;
+} */
+.col-md-6 .subject{
+    margin-top: 45px;
+}
+.col-md-6 .book-label{
+    margin-top: 45px;
 }
 .book-now-form label{
     margin-top: 10px;
